# orchestrator

./: .gitignore  README.md  config.json  pyproject.toml  생성형AI시대의_평가자동화시스템_소개.md  생성형AI시대의_프로그래밍평가_자동화시스템_소개.md
**HTML-REPORT-SAMPLES**/: case00_baseline_1.html  case00_baseline_1.md  case00_baseline_2.html  case00_baseline_3.html  case01_ideal_human_final.html  case02_initial_burst_ai_final.html  case03_feature_burst_ai_final.html  case04_cramming_ai_final.html  case05_clumsy_beginner_final.html  case06_steady_worker.html  case07_ai_burst_early.html  case08_procrastinator.html  case09_trial_error.html  case10_methodical_planner.html  case11_copy_paste_heavy.html  case12_perfectionist.html
**MISSION-INSPECTOR-OVERALL**/: MISSION_INSPECTOR.md
orchestrator/: main.py
