[project]
name = "orchestrator"
version = "1.0.0"
description = "Pipeline orchestrator for student submissions"
authors = [
    {name = "Sungwon Lee",email = "drsungwon@khu.ac.kr"}
]
license = {text = "MIT Lisense"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
orchestrate = "orchestrator.main:main"